--- a/assets/views/history.html
+++ b/assets/views/history.html
@@ -5,16 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="../../css/style-history.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>510-Music</title>
 </head>
@@ -22,30 +19,22 @@
 <body>
 
   <!-- Navbar -->
-
   <div class="warna">
     <div class="container-fluid px-md-5">
       <div class="row justify-content-between">
         <div class="col-md-8 order-md-last">
           <div class="row">
             <div class="col-md-6 text-center">
-              <a class="navbar-brand" href="index.html"><img class="w-50 p-3" src="../img/logo.png"></a>
+              <a class="navbar-brand" href="index.html"><img class="w-50 p-3" src="../img/logo.png" alt="Logo"></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 d-flex">
           <div class="social-media">
             <p class="mb-0 d-flex align-items-center">
-              <a href="https://www.instagram.com/official510music/"
-                class="d-flex align-items-center justify-content-center text-decoration-none"><i
-                  class='bx bxl-instagram-alt'></i></a>
-              <a href="https://open.spotify.com/artist/298CtZa1wRSxNc38FmWbiX?si=O-1_xmRcTgO9fc3ynMYLxQ"
-                class="d-flex align-items-center justify-content-center text-decoration-none"><i
-                  class='bx bxl-spotify'></i></a>
-              <a href="https://www.youtube.com/channel/UCQoW3oyEeUFNi--6qcvqZcg"
-                class="d-flex align-items-center justify-content-center text-decoration-none"><i
-                  class='bx bxl-youtube'></i></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"></a>
+              <a href="https://www.instagram.com/official510music/" class="d-flex align-items-center justify-content-center text-decoration-none"><i class='bx bxl-instagram-alt'></i></a>
+              <a href="https://open.spotify.com/artist/298CtZa1wRSxNc38FmWbiX?si=O-1_xmRcTgO9fc3ynMYLxQ" class="d-flex align-items-center justify-content-center text-decoration-none"><i class='bx bxl-spotify'></i></a>
+              <a href="https://www.youtube.com/channel/UCQoW3oyEeUFNi--6qcvqZcg" class="d-flex align-items-center justify-content-center text-decoration-none"><i class='bx bxl-youtube'></i></a>
             </p>
           </div>
         </div>
@@ -55,6 +44,9 @@
   <div class="warna2">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
       <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav m-auto">
             <li class="nav-item"><a href="../../index.html" class="nav-link">Home</a></li>
@@ -70,79 +62,70 @@
   </div>
   <!-- END nav -->
 
-    <!-- Judul -->
-    <div class="container-fluid p-0">
-        <div class="image-container">
-            <img src="../../assets/img/history.png" alt="Gambar" class="img-fluid"> <!-- Gambar dengan kelas Bootstrap -->
-            <div class="text-overlay">History</div>
-        </div>
+  <!-- Judul -->
+  <div class="container-fluid p-0">
+    <div class="image-container">
+      <img src="../../assets/img/history.png" alt="Gambar" class="img-fluid">
+      <div class="text-overlay">History</div>
     </div>
-    <!-- end Judul -->
+  </div>
+  <!-- end Judul -->
 
-    <!-- History -->
-    <div class="container">
-      <div class="custom-container text-center" data-aos="fade-up">
-          <img src="../img/510-history.jpg" class="img-fluid rounded" alt="Gambar Sejarah">
-          <h2 class="mt-3">History 510</h2>
-          <p>
-            <b>510</b> berawal dari band indie <b>Slap It Out</b> yang terbentuk pada 14 Februari 2010 silam, Dan mengawali karir dengan merilis album <b>"A Thousand Fairytale"</b> pada 25 September 2016.
-            <b>Slap It Out</b> sendiri merilis album ini secara mandiri, tanpa ada label yang menaungi hingga melakukan mixing dan mastering secara independent.
-            Awalnya, <b>Slap It Out</b> beranggotakan <b>Faizal Halim Permana</b> sebagai vokal, <b>Ahmad Zaidi Noor</b> dan <b>Auza Habibie Kamil</b> sebagai gitaris,
-            <b>Septian Arifin</b> sebagai bassist dan terakhir <b>Renold Iman</b> yang ada di posisi drum.
-          </p>
-          <p>
-            Namun, <b>Slap It Out</b> sempat tertidur dan belum lama ini bangkit dengan identitas baru, yakni <b>510</b>.
-            <b>510</b>, selain menyiratkan <b>'Slap It Out'</b>, juga memiliki makna dari <b>angka malaikat</b>.
-            <b>510</b> sendiri beranggotakan <b>Faizal Halim Permana</b> sebagai vokal, <b>Pras Goldinantara</b> sebagai gitaris dan <b>Winaldy Senna</b> sebagai drumer.
-            Pada tahun 2021, <b>510</b> merilis single berjudul <b>"Alive"</b>, dan belum lama ini merilis sebuah Album berjudul <b>"Origin"</b>.
-          </p>
-      </div>
+  <!-- History -->
+  <div class="container">
+    <div class="custom-container text-center" data-aos="fade-up">
+      <img src="../img/510-history.jpg" class="img-fluid rounded" alt="Gambar Sejarah">
+      <h2 class="mt-3">History 510</h2>
+      <p>
+        <b>510</b> berawal dari band indie <b>Slap It Out</b> yang terbentuk pada 14 Februari 2010 silam, Dan mengawali karir dengan merilis album <b>"A Thousand Fairytale"</b> pada 25 September 2016.
+        <b>Slap It Out</b> sendiri merilis album ini secara mandiri, tanpa ada label yang menaungi hingga melakukan mixing dan mastering secara independent.
+        Awalnya, <b>Slap It Out</b> beranggotakan <b>Faizal Halim Permana</b> sebagai vokal, <b>Ahmad Zaidi Noor</b> dan <b>Auza Habibie Kamil</b> sebagai gitaris,
+        <b>Septian Arifin</b> sebagai bassist dan terakhir <b>Renold Iman</b> yang ada di posisi drum.
+      </p>
+      <p>
+        Namun, <b>Slap It Out</b> sempat tertidur dan belum lama ini bangkit dengan identitas baru, yakni <b>510</b>.
+        <b>510</b>, selain menyiratkan <b>'Slap It Out'</b>, juga memiliki makna dari <b>angka malaikat</b>.
+        <b>510</b> sendiri beranggotakan <b>Faizal Halim Permana</b> sebagai vokal, <b>Pras Goldinantara</b> sebagai gitaris dan <b>Winaldy Senna</b> sebagai drumer.
+        Pada tahun 2021, <b>510</b> merilis single berjudul <b>"Alive"</b>, dan belum lama ini merilis sebuah Album berjudul <b>"Origin"</b>.
+      </p>
+    </div>
   </div>
 
-  <!-- Sub-history -->
-   
-
-    <!-- Footer -->
+  <!-- Footer -->
   <section class="">
     <footer class="bg-body-tertiary" style="background-color: rgb(15, 15, 15);">
       <div class="container p-3">
         <div class="row">
           <div class="col-lg-6 col-md-12 mb-4 mb-md-0 d-flex justify-content-center align-items-center">
-            <img style="width: 20%px;" src="../img/logo.png" alt="">
-        </div>
-  
+            <img style="width: 40%;" src="../img/logo.png" alt="Logo">
+          </div>
+
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase text-white">Social</h5>
-  
+            <h5 class="text-uppercase2 text-white">Social</h5>
+
             <ul class="social list-unstyled mb-0">
               <li>
-                <a href="https://www.instagram.com/official510music/"
-                class="d-flex align-items-center justify-content-left text-decoration-none"><i
-                  class='bx bxl-instagram-alt'></i><small class="ms-2" style="font-size: 18px;">@official510music</small></a>
+                <a href="https://www.instagram.com/official510music/" class="d-flex align-items-center justify-content-left text-decoration-none"><i class='bx bxl-instagram-alt'></i><small class="ms-2" style="font-size: 18px;">@official510music</small></a>
               </li>
               <li>
-                <a href="https://open.spotify.com/artist/298CtZa1wRSxNc38FmWbiX?si=O-1_xmRcTgO9fc3ynMYLxQ"
-                class="d-flex align-items-center justify-content-left text-decoration-none"><i
-                  class='bx bxl-spotify'></i><small class="ms-2" style="font-size: 18px;">510</small></a>
+                <a href="https://open.spotify.com/artist/298CtZa1wRSxNc38FmWbiX?si=O-1_xmRcTgO9fc3ynMYLxQ" class="d-flex align-items-center justify-content-left text-decoration-none"><i class='bx bxl-spotify'></i><small class="ms-2" style="font-size: 18px;">510</small></a>
               </li>
               <li>
-                <a href="https://www.youtube.com/channel/UCQoW3oyEeUFNi--6qcvqZcg"
-                class="d-flex align-items-center justify-content-left text-decoration-none"><i
-                  class='bx bxl-youtube'></i><small class="ms-2" style="font-size: 18px;">510</small></a>
+                <a href="https://www.youtube.com/channel/UCQoW3oyEeUFNi--6qcvqZcg" class="d-flex align-items-center justify-content-left text-decoration-none"><i class='bx bxl-youtube'></i><small class="ms-2" style="font-size: 18px;">510</small></a>
               </li>
             </ul>
           </div>
-  
+
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase mb-0 text-white" style="margin-left: 5%;">Menu</h5>
-  
+            <h5 class="text-uppercase mb-0 text-white">Menu</h5>
+
             <ul class="list-unstyled">
-            <li class="nav-item"><a href="../../index.html" class="nav-link text-white" style="margin-bottom: -15px;">Home</a></li>
-            <li class="nav-item"><a href="../../assets/views/profil.html" class="nav-link text-white" style="margin-bottom: -15px;">Profil</a></li>
-            <li class="nav-item"><a href="../../assets/views/gallery.html" class="nav-link text-white" style="margin-bottom: -15px;">Gallery</a></li>
-            <li class="nav-item active"><a href="history.html" class="nav-link text-white" style="margin-bottom: -15px;">History</a></li>
-            <li class="nav-item"><a href="../../assets/views/merch.html" class="nav-link text-white" style="margin-bottom: -15px;">Merchendice</a></li>
-            <li class="nav-item"><a href="../../assets/views/contact.html" class="nav-link text-white" style="margin-bottom: -15px;">Contact</a></li>
+              <li class=" nav-item"><a href="../../index.html" class="nav-link text-white" style="margin-bottom: -15px;">Home</a></li>
+              <li class="nav-item"><a href="../../assets/views/profil.html" class="nav-link text-white" style="margin-bottom: -15px;">Profil</a></li>
+              <li class="nav-item"><a href="../../assets/views/gallery.html" class="nav-link text-white" style="margin-bottom: -15px;">Gallery</a></li>
+              <li class="nav-item active"><a href="history.html" class="nav-link text-white" style="margin-bottom: -15px;">History</a></li>
+              <li class="nav-item"><a href="../../assets/views/merch.html" class="nav-link text-white" style="margin-bottom: -15px;">Merchendice</a></li>
+              <li class="nav-item"><a href="../../assets/views/contact.html" class="nav-link text-white" style="margin-bottom: -15px;">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -157,13 +140,13 @@
 
   <script>
     window.addEventListener('load', function() {
-    AOS.init();
-});
+      AOS.init();
+    });
   </script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
