--- a/css/style-album.css
+++ b/css/style-album.css
@@ -172,6 +172,80 @@ footer .social a {
     transition: .5s;
 }
 
+.text-uppercase {
+    margin-left: 5%;
+}
+
+.text-uppercase2 {
+    margin-left: 0;
+    font-size: 25px;
+}
+
 footer .nav-link {
     margin-right: 100%;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .text1 {
+        font-size: 40px;
+    }
+
+    .social-media a {
+        display: flex;
+        font-size: 40px;
+        color: white;
+        margin-top: 15px;
+        padding: 10px;
+        transition: .5s;
+        margin-left: 39%;
+        justify-content: center;
+    }
+
+    .album-container {
+        margin-top: 20px;
+        background: rgba(0, 0, 0, .1);
+        backdrop-filter: blur(50px);
+        border-radius: 30px;
+        padding: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        width: 80%;
+    }
+
+    .video-container {
+        border-radius: 15px;
+        overflow: hidden;
+        height: 200px;
+        width: 300px;
+        box-shadow: 0 0 10px #000000, 0 0 20px #000000, 0 0 30px #e90000;
+    }
+
+    iframe {
+        width: 100%;
+        height: 200px;
+        border: none;
+        display: block;
+    }
+    
+    
+    .text-uppercase {
+        margin-left: 42%;
+    }
+
+    .text-uppercase2 {
+        margin-left: 42%;
+    }
+
+    footer .social a {
+        font-size: 30px;
+        color: white;
+        margin-top: 10px;
+        margin-left: 30%;
+    }
+    
+    footer .nav-link {
+        margin-bottom: 5px;
+        margin-left: 40%;
+    }
 }
